Fix links in quickstart

--- a/docs-src/docs/guide/quickstart.mdx
+++ b/docs-src/docs/guide/quickstart.mdx
@@ -21,8 +21,8 @@ Install via pip:
   </TabItem>
   <TabItem value="kognic-auth-installation" label="kognic-auth" default>
     Not needed for file uploads. Install `kognic-auth` if you intend to use
-    [Dataset exploration](./dataset-exploration/introduction.md) or [Annotation
-    integration](./annotation-integration/introduction.md). ```bash pip install
+    [Dataset exploration](../dataset-exploration/introduction.md) or [Annotation
+    integration](../annotation-integration/introduction.md). ```bash pip install
     --upgrade kognic-auth ```
   </TabItem>
 </Tabs>
@@ -73,4 +73,4 @@ You should now be set up to interact with the Kognic Platform.
 ## Next steps
 
 - [Upload your first scene](./upload-your-first-scene.mdx): Quick guide on how to upload data to the Kognic Platform
-- [Key concepts](./key_concepts.md): Learn about the key concepts of the Kognic Platform
+- [Key concepts](../key_concepts.md): Learn about the key concepts of the Kognic Platform
