Use regex to determine active base path

--- a/docs-src/docs/guide/upload-your-first-scene.mdx
+++ b/docs-src/docs/guide/upload-your-first-scene.mdx
@@ -1,7 +1,6 @@
 ---
 id: upload-your-first-scene
 title: Upload your first scene
-slug: /upload-your-first-scene
 ---
 
 import Tabs from "@theme/Tabs";
@@ -80,7 +79,7 @@ Below follows examples for a few different cases.
 
 :::note
 Multiple point clouds is also supported, but not shown in the examples above since that requires a bit more data.
-See the [Motion Compensation](./kognic-io/scenes/lidars_with_imu_data.md) section for more details.
+See the [Motion Compensation](/docs/kognic-io/scenes/lidars_with_imu_data.md) section for more details.
 :::
 
 </details>
@@ -118,7 +117,7 @@ You may see the scene initially in the *processing* state while Kognic performs 
 ## Next steps
 
 - [View your scene](./view-uploaded-scene.mdx) in the Kognic Platform
-- [Key concepts](./key_concepts.md): Learn about the key concepts of the Kognic Platform
-- [Scenes](./kognic-io/overview): Dive deeper into scenes and how to work with them
-- [Calibrations](./kognic-io/calibrations/overview): Learn how to create and manage calibrations
-- [Sending scene for annotation](./kognic-io/working_with_scenes_and_inputs#creating-inputs-from-scene): Learn how to send a scene for annotation
+- [Key concepts](/docs/key_concepts.md): Learn about the key concepts of the Kognic Platform
+- [Scenes](/docs/kognic-io/overview): Dive deeper into scenes and how to work with them
+- [Calibrations](/docs/kognic-io/calibrations/overview): Learn how to create and manage calibrations
+- [Sending scene for annotation](/docs/kognic-io/working_with_scenes_and_inputs#creating-inputs-from-scene): Learn how to send a scene for annotation
