--- a/docs-src/docs/guide/prerequisites-for-annotation.mdx
+++ b/docs-src/docs/guide/prerequisites-for-annotation.mdx
@@ -1,6 +1,7 @@
 ---
 id: prerequisites-for-annotation
 title: Prerequisites for Annotation
+slug: /prerequisites-for-annotation
 ---
 
 import Tabs from "@theme/Tabs";
