Tweak menu order, page routing

--- a/docs-src/docs/upload-data/ordering-annotation.mdx
+++ b/docs-src/docs/upload-data/ordering-annotation.mdx
@@ -1,6 +1,7 @@
 ---
 id: ordering-annotation
 title: Ordering Annotation
+pagination_next: download-annotations/download-annotations
 ---
 
 import Tabs from "@theme/Tabs";
