--- a/docs-src/docs/download-annotations/download-annotations.mdx
+++ b/docs-src/docs/download-annotations/download-annotations.mdx
@@ -1,6 +1,6 @@
 ---
 id: download-annotations
-title: Download Annotations
+title: Download annotations
 pagination_prev: upload-data/ordering-annotation
 pagination_next: key_concepts
 ---
