--- a/docs-src/docs/upload-data/upload-your-first-scene.mdx
+++ b/docs-src/docs/upload-data/upload-your-first-scene.mdx
@@ -1,6 +1,6 @@
 ---
 id: upload-your-first-scene
-title: Upload your first scene
+title: Upload your First Scene
 slug: /upload-your-first-scene
 ---
 
@@ -22,7 +22,7 @@ This guide will walk you through the process of uploading your first scene, eith
 
 ## Prerequisites
 
-You have successfully followed the [Quickstart](./quickstart.mdx) guide and have the `kognic-io` library installed.
+You have successfully followed the [Quickstart](../getting-started/quickstart.mdx) guide and have the `kognic-io` library installed.
 
 <details>
   <summary>
@@ -80,7 +80,7 @@ Below follows examples for a few different cases.
 
 :::note
 Multiple point clouds is also supported, but not shown in the examples above since that requires a bit more data.
-See the [Motion Compensation](./kognic-io/scenes/lidars_with_imu_data.md) section for more details.
+See the [Motion Compensation](../kognic-io/scenes/lidars_with_imu_data.md) section for more details.
 :::
 
 </details>
@@ -114,11 +114,3 @@ check the status of the scene via the Platform or the Python client.
 
 You may see the scene initially in the *processing* state while Kognic performs a little background processing, or in the
 *ready* or *failed* state after processing completes.
-
-## Next steps
-
-- [View your scene](./view-uploaded-scene.mdx) in the Kognic Platform
-- [Key concepts](./key_concepts.md): Learn about the key concepts of the Kognic Platform
-- [Scenes](./kognic-io/overview): Dive deeper into scenes and how to work with them
-- [Calibrations](./kognic-io/calibrations/overview): Learn how to create and manage calibrations
-- [Sending scene for annotation](./kognic-io/working_with_scenes_and_inputs#creating-inputs-from-scene): Learn how to send a scene for annotation
