--- a/docs-src/docs/upload-data/ordering-annotation.mdx
+++ b/docs-src/docs/upload-data/ordering-annotation.mdx
@@ -1,7 +1,7 @@
 ---
 id: ordering-annotation
 title: Ordering Annotation
-slug: /ordering-annotation
+pagination_next: download-annotations/download-annotations
 ---
 
 import Tabs from "@theme/Tabs";
@@ -18,11 +18,11 @@ When creating a scene, you can also specify the request to add it to, and an inp
 
 It is also possible to add the scene to another request later on, re-using it for annotation in multiple requests
 
-For complete information, refer to [Working with Scenes & Inputs, Creating Inputs Directly](./kognic-io/working_with_scenes_and_inputs#creating-inputs-directly)
+For complete information, refer to [Working with Scenes & Inputs, Creating Inputs Directly](../kognic-io/working_with_scenes_and_inputs#creating-inputs-directly)
 
 ## Separate from scene creation (existing scenes)
 
 If a scene is created without specifying a request, it will be created but not sent for annotation. 
 The scene can then be sent for annotation by adding it to one or multiple requests at any point later on.
 
-For complete information, refer to [Working with Scenes & Inputs, Creating Inputs from Scene](./kognic-io/working_with_scenes_and_inputs#creating-inputs-from-scene)
+For complete information, refer to [Working with Scenes & Inputs, Creating Inputs from Scene](../kognic-io/working_with_scenes_and_inputs#creating-inputs-from-scene)
