Fix link, remove default tab

--- a/docs-src/docs/upload-data/upload-zod-data.mdx
+++ b/docs-src/docs/upload-data/upload-zod-data.mdx
@@ -32,7 +32,7 @@ zod
 ```
 pip install zod
 ```
-3. You need to have a Kognic account and the Kognic Python client installed. If you have not done this yet, read the [quickstart guide](quickstart.mdx).
+3. You need to have a Kognic account and the Kognic Python client installed. If you have not done this yet, read the [quickstart guide](getting-started/quickstart.mdx).
 </details>
 
 This guide follows the process of uploading scenes using ZOD data, using the example code from
@@ -44,7 +44,7 @@ set up.
   <TabItem value="cameras-sequence" label="Cameras Sequence">
     <ZodUploadCamerasSeq />
   </TabItem>
-  <TabItem value="lidars-and-cameras-sequence" label="Lidars and Cameras Sequence" default>
+  <TabItem value="lidars-and-cameras-sequence" label="Lidars and Cameras Sequence">
     <ZodUploadLCSSeq />
   </TabItem>
   <TabItem value="aggregated-lidars-and-cameras-sequence" label="Aggregated Lidars and Cameras Sequence">
