Zod page doesn't need custom slug

--- a/docs-src/docs/upload-data/upload-your-first-scene.mdx
+++ b/docs-src/docs/upload-data/upload-your-first-scene.mdx
@@ -90,7 +90,7 @@ See the [Motion Compensation](../kognic-io/scenes/lidars_with_imu_data.md) secti
   </summary>
 
   We have exemplar code and a tutorial for uploading scenes using Zenseact Open Dataset (ZOD) data, including 2D, 3D,
-  and aggregated 3D scenes. [Check out the guide document and exemplar code here!](./upload-zod-data)
+  and aggregated 3D scenes. [Check out the guide document and exemplar code here!](./upload-data/upload-zod-data)
 
   If you have the ZOD data downloaded, and have Kognic API credentials, the examples will run out of the box to create
   functional scenes!
