Must link to ZOD landing.

--- a/docs-src/docs/upload-data/upload-zod-data.mdx
+++ b/docs-src/docs/upload-data/upload-zod-data.mdx
@@ -12,7 +12,7 @@ import ZodUploadLCSSeq from "./code-snippets/zod/_upload_lcs_seq.mdx";
 import ZodUploadALCSSeq from "./code-snippets/zod/_upload_alcs_seq.mdx";
 
 
-This tutorial will guide you through uploading different [scene types](docs/kognic-io/overview.md#different-types-of-scenes) using the Zenseact Open Dataset (ZOD).
+This tutorial will guide you through uploading different [scene types](docs/kognic-io/overview.md#different-types-of-scenes) using the [Zenseact Open Dataset (ZOD)](https://zod.zenseact.com/).
 The purpose of this page is to show you some of the steps that might be needed to convert recordings into Kognic scenes.
 
 <details>
