--- a/docs-src/docs/upload-data/upload-your-first-scene.mdx
+++ b/docs-src/docs/upload-data/upload-your-first-scene.mdx
@@ -89,7 +89,7 @@ See the [Motion Compensation](../kognic-io/scenes/lidars_with_imu_data.md) secti
     <h2 style={{margin: '0px'}}>Uploading using ZOD Data</h2>
   </summary>
 
-  We have exemplar code and a tutorial for uploading scenes using Zenseact Open Dataset (ZOD) data, including 2D, 3D,
+  We have exemplar code and a tutorial for uploading scenes using [Zenseact Open Dataset (ZOD)](https://zod.zenseact.com/) data, including 2D, 3D,
   and aggregated 3D scenes. [Check out the guide document and exemplar code here!](./upload-data/upload-zod-data)
 
   If you have the ZOD data downloaded, and have Kognic API credentials, the examples will run out of the box to create
