--- a/docs-src/docs/download-annotations/download-annotations.mdx
+++ b/docs-src/docs/download-annotations/download-annotations.mdx
@@ -16,7 +16,7 @@ Once the annotations are made delivery-ready and are exported, they can be downl
 
 <Details>
   <summary>
-    <h2>Annotations for a Scene</h2>
+    <h2 style={{margin: '0px'}}>Annotations for a Scene</h2>
   </summary>
 
 ```python
@@ -35,7 +35,7 @@ This method returns all delivered annotations in the form of `Annotation` object
 
 <Details>
     <summary>
-      <h2>Annotations for a Project or Batch</h2>
+      <h2 style={{margin: '0px'}}>Annotations for a Project or Batch</h2>
     </summary>
 
 ```python
@@ -54,4 +54,5 @@ for annotation in annotations:
 
 This example fetches annotations for an entire project or batch. This retrieves `Annotation` objects for all delivered
 annotations for the given `project`, `batch` and `annotation_type`.
+
 </Details>
