--- a/docs-src/docs/kognic-io/project.mdx
+++ b/docs-src/docs/kognic-io/project.mdx
@@ -70,7 +70,8 @@ project_batch = client.project.create_batch(
   batch="<batch_external_id>",
 )
 ```
-The newly created batch will contain the same [Annotation Types](annotation_types) as 
+
+The newly created batch will contain the same Annotation Types as
 the latest batch by default.
 
 This method has an optional flag `publish_previous_batches` which defaults to `False`. By setting this flag to 
