Link to workspace section in prereqs

--- a/docs-src/docs/upload-data/upload-your-first-scene.mdx
+++ b/docs-src/docs/upload-data/upload-your-first-scene.mdx
@@ -23,7 +23,7 @@ This guide will walk you through the process of uploading your first scene, eith
 
 ## Prerequisites
 
-You have successfully followed the [Quickstart](../getting-started/quickstart.mdx) guide and have the `kognic-io` library installed.
+You have successfully followed the [Quickstart](../getting-started/quickstart.mdx) guide and have the `kognic-io` library installed. For users with access to multiple workspaces you need to [specify a workspace to upload data too.](https://developers.kognic.com/docs/kognic-apis#specifying-a-workspace)
 
 <details>
   <summary>
