Rename Setup to Advanced setup and remove key concept from next steps to avoid user from getting stuck reading theory

--- a/docs-src/docs/getting-started/quickstart.mdx
+++ b/docs-src/docs/getting-started/quickstart.mdx
@@ -11,24 +11,21 @@ import TabItem from "@theme/TabItem";
 Kognic provides a client called [kognic-io](https://pypi.org/project/kognic-io/) to simplify calling our APIs using Python.
 
 ## Installation
+
 Install via pip:
 
 <Tabs>
   <TabItem value="kognic-io-installation" label="kognic-io" default>
-    Install `kognic-io` for the most common use cases like file uploads and project management.
-    ```bash
-    pip install --upgrade kognic-io
-    ```
+    Install `kognic-io` for the most common use cases like file uploads and
+    project management. ```bash pip install --upgrade kognic-io ```
   </TabItem>
   <TabItem value="kognic-auth-installation" label="kognic-auth" default>
-    Not needed for file uploads. Install `kognic-auth` if you intend to use [Dataset exploration](../dataset-exploration/introduction.md) or [Annotation integration](../annotation-integration/introduction.md).
-    ```bash
-    pip install --upgrade kognic-auth
-    ```
+    Not needed for file uploads. Install `kognic-auth` if you intend to use
+    [Dataset exploration](../dataset-exploration/introduction.md) or [Annotation
+    integration](../annotation-integration/introduction.md). ```bash pip install
+    --upgrade kognic-auth ```
   </TabItem>
 </Tabs>
-
-
 
 ## Generating credentials
 
@@ -50,7 +47,7 @@ To verify that they are correct you can simply list projects in Python:
 
 ::::note
 Since kognic-io v2.4.0 you can provide a workspace id that will be used for writes.
-For users with multiple workspaces this will be mandatory. [See this page for instructions.](../kognic_apis.md#specifying-a-workspace) 
+For users with multiple workspaces this will be mandatory. [See this page for instructions.](../kognic_apis.md#specifying-a-workspace)
 ::::
 
 <Tabs>
@@ -78,7 +75,6 @@ For users with multiple workspaces this will be mandatory. [See this page for in
 
 You should now be set up to interact with the Kognic Platform.
 
-## Next steps
+## Next step
 
 - [Upload your first scene](../upload-data/upload-your-first-scene.mdx): Quick guide on how to upload data to the Kognic Platform
-- [Key concepts](../key_concepts.md): Learn about the key concepts of the Kognic Platform
