--- a/docs-src/docs/upload-data/view-uploaded-scene.mdx
+++ b/docs-src/docs/upload-data/view-uploaded-scene.mdx
@@ -16,13 +16,6 @@ Every scene has a view link that allows it to be viewed in the annotation tool, 
 You can find the scene again either in the Kognic Platform or via the Python client:
 
 <Tabs>
-    <TabItem value="platform" label="Kognic Platform" default>
-        Go to the [Data Orchestration tab](https://app.kognic.com/data-orchestration) in the Kognic Platform and search for
-        the scene by its UUID or use any other suitable search criteria. Once it is ready, you can view it by clicking on
-        the link provided when opening the menu. It may take a short time for the scene to transition from "processing" to "ready".
-
-        Note that you may need to contact Kognic to get access to _Data Orchestration_ in case you do not see it.
-    </TabItem>
     <TabItem value="python" label="Python" default>
         Use the `get_scenes_by_uuids` method to get the scene object, and then access its `view_link` attribute, which
         is populated once the scene is ready.
@@ -32,6 +25,15 @@ You can find the scene again either in the Kognic Platform or via the Python cli
         print(f"View the scene at {scene.view_link}")
         ```
     </TabItem>
+    <TabItem value="platform" label="Kognic Platform" default>
+        **Note that you may need to contact Kognic to get access to _Data Orchestration_ in case you do not see it.**
+
+        Go to the [Data Orchestration tab](https://app.kognic.com/data-orchestration) in the Kognic Platform and search for
+        the scene by its UUID or use any other suitable search criteria. Once it is ready, you can view it by clicking on
+        the link provided when opening the menu. It may take a short time for the scene to transition from "processing" to "ready".
+
+    </TabItem>
+
 </Tabs>
 
 ## Check calibration of 3D scenes
@@ -54,6 +56,7 @@ Start by opening the scene view link as described above.
         2. Find a well defined object in the pointcloud and hover the mouse cursor over a point on it.
         3. The cursor position is projected into the selected camera and shown as a dot on the camera thumbnail at the top right.
     </TabItem>
+
 </Tabs>
 
 :::info Calibrations are immutable
