Quickstart next step changed to upload your first scene

--- a/docs-src/docs/getting-started/quickstart.mdx
+++ b/docs-src/docs/getting-started/quickstart.mdx
@@ -1,6 +1,7 @@
 ---
 id: quickstart
 title: Quickstart
+pagination_next: upload-data/upload-your-first-scene
 ---
 
 import Tabs from "@theme/Tabs";
